crates/keron-lang/tests/corpus/errors/check/fn_int_body_missing_trailing.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: expected `Int`, found block with no trailing expression (type `Void`)
  --> 1:19
  |
1 | fn nothing(): Int {}
  |                   ^^^
